# VibeCoder

./: .gitignore  CLAUDE.md  PROGRESS.md  am_tools.py  app_generator.py  app_generator_wrapper.py  app_spec.py  bash.exe.stackdump  generate_app.py  generate_prompt.py  main.py  plan.md  prompt.md  prompt_loader.py  prompts.md  pyproject.toml  requirements_gatherer.py  sdlc_agents_simulation.py  streamlit_gui.py  template_generator.py  test.py  test_prd_enhancement.py  ui_agent.py  ui_design.md  usage_examples.md  user_requirements.md
.cursor/plans/: human-feedback-loop-afe9290a.plan.md  implement-qa-and-auto-fix-agents-6ec3fc75.plan.md
.streamlit/: config.toml
Multiple_Agents_Simulation/BlueToDo/: PRD.md  app_spec.json  app_spec_review.txt  ui_design.md
Multiple_Agents_Simulation/DailyTasks/: PRD.md  app_spec.json
Multiple_Agents_Simulation/DailyTasks2/: PRD.md  app_spec.json
Multiple_Agents_Simulation/FirstRecipeManager/: PRD.md
Multiple_Agents_Simulation/GreenToDo/: PRD.md  app_spec.json  ui_design.md
Multiple_Agents_Simulation/RedToDo/: PRD.md  app_spec.json  ui_design.md
Requirements_Gatherer/BozhiSPA/: plan.md  user_requirements.md
Requirements_Gatherer/ChinaTodo/: app_spec.json  plan.md  user_requirements.md
Requirements_Gatherer/GoodToDo/: plan.md  user_requirements.md
Requirements_Gatherer/HaotongTodo/: PRD.md
plans/: 2025_08_21_smolagent_edit_tools.md  2025_08_21_smolagent_template_generator.md
prompts/: prompt_manager.py
research/: openai-python.md
result/: README.md  fixed_index.html  index.html
src/: App.tsx  main.tsx  styles.css
(+292 files in other folders)
