[project]
name = "vibecoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "ddgs>=9.6.1",
    "fastapi>=0.118.0",
    "google-genai>=1.45.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.0.0",
    "langfuse>=3.7.0",
    "litellm>=1.0.0",
    "openai>=2.1.0",
    "pathlib2>=2.3.7",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "smolagents[litellm]>=1.21.0",
    "streamlit>=1.50.0",
    "typing-extensions>=4.0.0",
    "urllib3>=2.0.0",
    "uvicorn>=0.37.0",
    "watchdog>=3.0.0",
]
